#--------------------------------------------------------------------------------
#	AUTOMAKE input script
#
# Stylus, Copyright 2006-2008 Biologic Institute
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#--------------------------------------------------------------------------------

SUBDIRS = src

EXTRA_DIST = \
	bootstrap \
	build \
	Makerules.in \
	stylus \
	doc \
	html \
	schemas \
	scripts/fpconst.py \
	scripts/stexec.py \
	scripts/stgrid.py \
	scripts/strpt.py \
	scripts/uuid.py \
	scripts/stylus/__init__.py \
	scripts/stylus/codons.py \
	scripts/stylus/common.py \
	scripts/stylus/genome.py \
	scripts/stylus/xmldict.py \
	sample/5000/52DC.hcf \
	sample/5000/52DC.han \
	sample/5000/52DC.gene \
	sample/5000/52DC--sx50_00pct_sy50_00pct.gene \
	sample/plans/nosteps.xml \
	sample/plans/performance.xml \
	sample/plans/simple.xml
